# DjangoProject

./: pyproject.toml
djangoproject/: .env  db.sqlite3  run_aiosmtpd.py
djangoproject/djangoproject/: settings.py  urls.py
djangoproject/quotes/: forms.py  models.py  urls.py  utils.py  views.py
djangoproject/quotes/migrations/: 0001_initial.py  0002_rename_qute_quote.py
djangoproject/quotes/static/quotes/: style.css
djangoproject/quotes/templates/quotes/: add_author.html  add_quote.html  base.html  index.html
djangoproject/quotes/templatetags/: extract.py
djangoproject/users/: forms.py  urls.py  views.py
djangoproject/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
djangoproject/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
