[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["polinamamchur <polinamam04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
pymongo = "^4.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
